Test/Prop/Comm.expected
Test/Prop/Comm.lean:4:2: error: unable to prove goal, either it is false or you need to provide more facts. Here is a potential counter-example:

  f = fun _arg_1 _arg_2 => _arg_1 ∧ ¬_arg_2
  p = False
  q = True
